tests/parsing/smtlib/v2.6/errors/123_constructor_dec_list_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/123_constructor_dec_list_unclosed_1.smt2", line 2, character 27-28:
2 | (declare-datatype foo ((A) _))
                               ^
Error while parsing a list of constructor declarations,
      read the reserved word '_',
      but expected another constructor declaration of the form "(constructor
      selectors*)", or a closing parenthesis.
